[package]
name = "discord-bot"
version = "0.1.0"
authors = ["Bluegamerdog <bluegamerdogyt@gmail.com>"]
edition = "2021"

[dependencies]
dotenv = "0.15"
serenity = { version = "0.12.3", features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
    "framework",
] }
async-trait = "0.1"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
